# aracastone

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
arcastone/: __init__.py  app.py  main_window.py  theme.py
arcastone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
arcastone/core/: __init__.py  config.py  export.py  index.py  manifest.py  pdf.py  rag.py  retrieval_chat.py  sitemap.py  storage.py
arcastone/widgets/: __init__.py  about_panel.py  dashboard_panel.py  drop_ingest.py  export_panel.py  guide_panel.py  index_panel.py  qa_panel.py  search_panel.py  sitemap_panel.py  status_bar.py  terminal_panel.py
arcastone/workers/: __init__.py  export_worker.py  index_worker.py  ingest_worker.py  qa_worker.py  retrieval_worker.py  search_worker.py
scripts/: bundle_offline.py
scripts/macos/: build_dmg.py  build_pkg.sh  svg_to_icns.sh
scripts/models/: prepare_local_llm.py
tests/: test_manifest.py  test_storage.py
